# DZ_GoiT

./: DZ10.rar  pyproject.toml
02.03.24St/: .env  init_bot.py  main.py  notification_users.py
02.03.24St/database/: connect_dp.py  crud.py  models.py
02.03.24St/src/database/: connect_db.py  crud.py  models.py
02.03.24St/src/keyboards/: kb.py
02.03.24St/src/utils/: parser.py
DZ10/: pyproject.toml
DZ10/root/: db.sqlite3
DZ10/root/quotes/: utils.py  views.py
DZ10/root/root/: settings.py  urls.py
DZ10/root/utils/: migration.py  quotes.json
DZ10_1/: pyproject.toml
DZ10_2/root/utils/: add_quotes_to_mongo.py
DZ10_3/: DZ10_3.rar  pyproject.toml
DZ10_3/root/quotes/: urls.py  views.py
DZ10_3/root/root/: settings.py
DZ11/: DZ11.rar  docker-compose.yml  main.py  pyproject.toml
DZ11/docs/: conf.py  index.rst
DZ11/docs/source/: index.rst
DZ11/src/conf/: config.py
DZ11/src/entity/: models.py
DZ11/src/repository/: contacts.py  users.py
DZ11/src/routes/: auth.py  contacts.py  users.py
DZ11/src/schemas/: contact.py  user.py
DZ11/src/services/: auth.py
DZ12_FastApiUsers/: main.py
DZ12_Fast_Api_Users/: main.py  pyproject.toml
DZ12_Fast_Api_Users/migrations/versions/: e0b95afbb348_init.py
DZ12_Fast_Api_Users/src/conf/: config.py
DZ12_Fast_Api_Users/src/entity/: models.py
DZ12_Fast_Api_Users/src/routes/: auth.py  contacts.py
DZ12_Fast_Api_Users/src/schemas/: contact.py  user.py
DZ12_Fast_Api_Users/src/services/: auth.py  roles.py
DZ8/: consumer_email.py  consumer_sms.py  hw.py  models.py  producer.py
DZ9/: main.py  models.py
WEB_Dmutro_Kushevskii/: asgi.py  aws_pulumi.py  deployment.yaml  my_server.service  nginx.service.conf
WEB_Dmutro_Kushevskii/lesson10/lesson_1/: .gitignore
WEB_Dmutro_Kushevskii/lesson10/preparation/: .gitignore  dev-docker-compose.yaml  prod-docker-compose.yaml  prod.Dockerfile  pyproject.toml
WEB_Dmutro_Kushevskii/lesson10/preparation/nginx/: nginx.conf  notes.service
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/media/: .gitignore
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/noteapp/: admin.py  forms.py  models.py  urls.py  views.py
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_tag_tag_of_username.py
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/noteapp/templates/: base.html  detail.html  index.html  note.html  tag.html
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/notes/: settings.py  urls.py
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/users/: admin.py  models.py  urls.py  views.py
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/users/migrations/: 0001_initial.py
WEB_Dmutro_Kushevskii/lesson10/preparation/notes/users/templates/: profile.html  signup.html
WEB_Dmutro_Kushevskii/lesson11/backend/: pyproject.toml
WEB_Dmutro_Kushevskii/lesson11/backend/src/: alembic.ini  database.py  main.py
WEB_Dmutro_Kushevskii/lesson11/backend/src/migrations/: env.py
WEB_Dmutro_Kushevskii/lesson11/backend/src/planes/: models.py  routes.py  schemas.py
WEB_Dmutro_Kushevskii/lesson11/lesson_1/: .gitignore  db.py  docker-compose.yaml  main.py  pydantic_example.py  pyproject.toml  tester.py
WEB_Dmutro_Kushevskii/lesson12/lesson_1/: pyproject.toml
WEB_Dmutro_Kushevskii/lesson12/lesson_1/advanced_jwt/: auth.py  db.py  main.py
WEB_Dmutro_Kushevskii/lesson12/lesson_1/base_jwt/: auth.py  db.py  main.py  sql_app.db
WEB_Dmutro_Kushevskii/lesson12/livecode/: pyproject.toml
WEB_Dmutro_Kushevskii/lesson13/lesson_1/livecode/: pyproject.toml
WEB_Dmutro_Kushevskii/lesson13/lesson_1/livecode/src/: main.py  planes.sqlite
WEB_Dmutro_Kushevskii/lesson13/lesson_1/livecode/src/auth/: exceptions.py  models.py  routes.py  schemas.py  service.py
WEB_Dmutro_Kushevskii/lesson13/lesson_1/livecode/src/auth/templates/: email_template.html
WEB_Dmutro_Kushevskii/lesson13/lesson_1/livecode/src/planes/: exceptions.py  models.py
WEB_Dmutro_Kushevskii/lesson13/lesson_2/: pyproject.toml
WEB_Dmutro_Kushevskii/lesson13/lesson_2/cloudinary_example/: .env  cloudinary_exmpl.py
WEB_Dmutro_Kushevskii/lesson13/lesson_2/rate_limitation/: docker-compose.yaml  fastapi_limiter_example.py
WEB_Dmutro_Kushevskii/lesson13/lesson_2/test_dotenv/: .env  decouple_pull.py  dotenv_pull.py
WEB_Dmutro_Kushevskii/lesson14/lesson_1/mkdocs/: mkdocs.yml  pyproject.toml
WEB_Dmutro_Kushevskii/lesson14/lesson_1/mkdocs/docs/: hello.md
WEB_Dmutro_Kushevskii/lesson1_2_3_4_presentations/: Presentation Python Web Lesson 1.2.pptx  Presentation Python Web Lesson 2.2.pptx  Presentation Python Web Lesson 3.1.pptx  Presentation Python Web Lesson 3.2.pptx
WEB_Dmutro_Kushevskii/lesson5/lesson_2/: async_http_client.py  client.html  sync_http_client.py  sync_http_client_with_session.py  websocket_client.py  websocket_server.py  websockets_chat_client.py  websockets_chat_server.py
WEB_Dmutro_Kushevskii/lesson6/lesson_1/: agregation_example.sql  alter_table_example.sql  create_table_example.sql  delete_example.sql  drop_table_example.sql  index_example.sql  insert_example.sql  join_examples.sql  select_example.sql  table_with_foreighn_key_example.sql  update_example.sql
WEB_Dmutro_Kushevskii/lesson6/lesson_2/: .gitignore  main.py  (+5 more)
WEB_Dmutro_Kushevskii/lesson7/lesson_2/: .gitignore  create_migrations.sh  db.py  pyproject.toml
WEB_Dmutro_Kushevskii/lesson9/lesson_1/project/: main.py  model.py  pyproject.toml
hw10/: pyproject.toml
hw10/root/: db.sqlite3
lesson11_FastAPI/: db.py  models.py  schemas.py
lesson11_RESTAPI/: main.py
lesson11_RESTAPI_Kushevskiy/src/: database.py  main.py
(+108 files in other folders)
