[tool.poetry]
name = "dz11"
version = "0.1.0"
description = ""
authors = ["bobantonbob <130400459+bobantonbob@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
asyncpq = "^0.44"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
