[tool.poetry]
name = "preparation"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Dima Kushchevskyi <d.kushchevskyi@sirinsoftware.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
