[tool.poetry]
name = "lesson-1"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Dima Kushchevskyi <d.kushchevskyi@sirinsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
