[tool.poetry]
name = "lesson-2"
version = "0.1.0"
description = ""
authors = ["Dima Kushchevskyi <d.kushchevskyi@sirinsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
faker = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
