[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Dima Kushchevskyi <d.kushchevskyi@sirinsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
