[tool.poetry]
name = "mkdocs-example"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Dima Kushchevskyi <d.kushchevskyi@sirinsoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "1.5.3"
mkdocstrings-python = "1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
